# btc_halving_crypto_event_study

./: README.md  main.py  pyproject.toml
classes/: crypto_downloader.py
core/: dependencies.py  security.py
db/: database.py  models.py
routers/: event_study.py  ohlc.py  users.py
schemas/: query_parameters.py  user.py
services/crud/: event.py  ohlc.py  user.py
services/utils/: create_default_data.py  crypto_client.py  time.py  validators.py
tests/routers/: test_event_study.py  test_users.py
tests/services/crud/: test_event.py  test_user.py
tests/services/utils/: test_create_default_data.py  test_time.py  test_validators.py
