[project]
name = "crypto-event-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "polars>=1.35.1",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.0",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
]
